--- a/src/main/webapp/resources/css/styleHeader.css
+++ b/src/main/webapp/resources/css/styleHeader.css
@@ -10,10 +10,11 @@
     margin: 0 auto;
 }
 header{
-    background-color: white;
+    background-color: #E6E6FA;
+    height: 80px;
 }
 header .logo{
-    padding-top: 10px;
+    margin-top: 10px;
     float: left;
     width:15%;
 }
@@ -22,13 +23,11 @@ header .main-menu{
     float: left;
     width: 55%;
 }
-header .main-menu .menu-select{
+header .main-menu .menu-select-2{
     padding-top: 10px;
     float: left;
-    width:25%;
-
+    width:50%;
 }
-
 header .main-menu .menu-select-1{
     padding-top: 15px;
     float: left;
